scrollbar fix

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -209,9 +209,9 @@ body {
 
 .checklist-item {
 	display: flex;
+	align-items: center;
 	width: 100%;
 	height: 40px;
-	align-items: center;
 	justify-content: center;
 }
 
@@ -220,11 +220,13 @@ body {
 	align-items: center;
 	justify-content: left;
 	width: 100%;
+	height: 40px;
 	max-width: 30vw;
 	min-width: 20px;
 	overflow-x: scroll;
-	min-height: 40px;
 	white-space: nowrap;
+	box-sizing: border-box;
+	scrollbar-width: none;
 }
 
 .checklist-item input[type="checkbox"] {
@@ -252,6 +254,9 @@ body {
 
 .checklist-item span {
 	margin-left: 10px;
+	font-size: 16px;
+	display: flex;
+	align-items: center;
 }
 
 .checklist-item.completed input[type="checkbox"]:checked {
